tests/docs/ojs/errors/test-multiple-errors.qmd
---
title: "Tests multiple errors"
format: html
---

Tests if multiple errors are reported correctly in a single cell:

```{ojs}
b = missingOnLine9
a = missingOnLine10
```

Test if multiple errors are reported correctly once some of them are cleared:

```{ojs}
import { aq, op } from '@uwdata/arquero'
c = aq
missingOnLine18
```
